# recipe-book

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Trunk.toml  build.rs  index.html  input.css  package-lock.json  tailwind.config.js
.github/workflows/: rust.yml
migrations/: 20230422031034_recipes.up.sql
src/: add_recipe.rs  app.rs  chatgpt.rs  components.rs  home.rs  lib.rs  main.rs  pages.rs  recipe.rs  storage.rs
src/backend/: fileserv.rs  mod.rs
src/components/: Page.rs  RecipeCard.rs
src/frontend/: app.rs
src/pages/: Home.rs  NewRecipe.rs
