[package]
name = "leptos-csr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.70"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
leptos = "0.2"
leptos_meta = { version = "0.2", features = ["csr"] }
leptos_router = { version = "0.2", features = ["csr"] }
log = "0.4.17"
reqwasm = "0.5.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
uuid = { version = "1.3.0", features = ["v4", "js", "serde"] }
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = ["Event", "Element", "Storage", "Window"] }

[package.metadata.leptos]
site-root = "."
